Mon Feb 19 12:28:47 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* node.c (format_val): Simplify code: always format the value
	ourselves. Use %.0f if the value is integral.
	* floatcomp.c (dval_out_of_range): Remove function, not needed.
	(awknum_fraction_bits): Removed.
	(adjust_uint): New function, defined IFF have uintmax_t.
	* builtin.c (tmp_integer): Use adjust_uint.
	Move include of <inttypes.h> and <stdint.h> ...
	* awk.h: to here.
	(awknum_fraction_bits): Removed.
	(adjust_uint): Declare or define as do-nothing macro.

Sun Feb 18 17:43:33 2007  Arnold D. Robbins  <arnold@skeeve.com>

	* node.c, floatcomp.c: Add include of <math.h> to get
	correct declarations of math functions.
	* configure.ac: If doing development, add -DYYDEBUG and also
	-fno-builtin for GCC.

Wed Feb 14 19:42:08 2007  Arnold D. Robbins  <arnold@skeeve.com>

	Add support for special infinity and NaN values in non-POSIX
	mode, and in POSIX mode, just call system `strtod'.

	* configure.ac [GAWK_AC_FUNC_STRTOD_C89]: Comment out.
	* node.c (is_ieee_magic_val, get_ieee_magic_val): New functions.
	(r_force_number): Adapt logic and use new functions.

Tue Feb 13 13:02:32 2007  Arnold D. Robbins  <arnold@skeeve.com>

	Move Paul's numeric stuff to a separate file to make code cleaner.

	* floatcomp.c (awknum_fraction_bits): New variable.
	(Floor, Ceil): Functions, moved here from macros in builtin.c.
	(dval_out_of_range): New function for checking if double is in range
	of long.
	(FLT_RADIX, FLT_MANT_DIG, DBL_MANT_DIG, AWKSMALL_MANT_DIG,
	AWKNUM_MANT_DIG, AWKNUM_FRACTION_BITS): Moved here from awk.h.
	* awk.h: Add decls of stuff now in floatcomp.c.
	* Makefile.am[base_sources]: Add floatcomp.c.
	* builtin.c (tmp_integer): Refer to `awknum_fraction_bits'
	instead of AWKNUM_FRACTION_BITS.
	* node.c (format_val): Call `dval_out_of_range' instead of
	inline coding the test.

2007-02-06  Paul Eggert  <eggert@cs.ucla.edu>

	* node.c (format_val): Fix bug when handling numbers close to